--- a/frmMain.glade
+++ b/frmMain.glade
@@ -25,10 +25,15 @@
         <property name="spacing">5</property>
         <child>
           <object class="GtkSearchEntry" id="searchBarTop">
+            <property name="width_request">400</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="tooltip_text" translatable="yes" context="Search Bar">Search for stuff online</property>
             <property name="halign">center</property>
+            <property name="valign">center</property>
+            <property name="truncate_multiline">True</property>
+            <property name="primary_icon_tooltip_text" translatable="yes">Search goods</property>
+            <property name="placeholder_text" translatable="yes">Search</property>
           </object>
           <packing>
             <property name="expand">False</property>
