--- a/frmMain.glade
+++ b/frmMain.glade
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.20.0 
+
+Copyright (C) 2016 Junde Yhi
+
+This file is part of Gank.io Desktop.
+
+Gank.io Desktop is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+Gank.io Desktop is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with Gank.io Desktop.  If not, see <http://www.gnu.org/licenses/>.
+
+Author: Junde Yhi
+
+-->
 <interface>
   <requires lib="gtk+" version="3.20"/>
+  <!-- interface-license-type gplv3 -->
+  <!-- interface-name Gank.io Desktop -->
+  <!-- interface-description Desktop client for gank.io -->
+  <!-- interface-copyright 2016 Junde Yhi -->
+  <!-- interface-authors Junde Yhi -->
   <object class="GtkListStore" id="listStoreAndroid"/>
   <object class="GtkListStore" id="listStoreExtendResources"/>
   <object class="GtkListStore" id="listStoreFrontEnd"/>
