--- a/frmMain.glade
+++ b/frmMain.glade
@@ -50,32 +50,6 @@ Author: Junde Yhi
         <property name="orientation">vertical</property>
         <property name="spacing">5</property>
         <child>
-          <object class="GtkSearchBar" id="searchBarMain">
-            <property name="app_paintable">True</property>
-            <property name="can_focus">False</property>
-            <property name="no_show_all">True</property>
-            <signal name="hide" handler="searchBarMain_hide_cb" object="stackContentSearch" swapped="no"/>
-            <signal name="show" handler="searchBarMain_show_cb" object="stackContentSearch" swapped="no"/>
-            <child>
-              <object class="GtkSearchEntry" id="searchEntryMain">
-                <property name="width_request">400</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="primary_icon_name">edit-find-symbolic</property>
-                <property name="primary_icon_activatable">False</property>
-                <property name="primary_icon_sensitive">False</property>
-                <property name="placeholder_text" translatable="yes">Search</property>
-                <signal name="stop-search" handler="searchEntryMain_stop_search_cb" object="searchBarMain" swapped="no"/>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkStack" id="stackContentSearch">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
@@ -610,44 +584,81 @@ Author: Junde Yhi
               </packing>
             </child>
             <child>
-              <object class="GtkStack" id="stackSearchTipResults">
+              <object class="GtkBox" id="boxSearch">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="transition_type">crossfade</property>
+                <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkLabel" id="lblSearchTop">
+                  <object class="GtkSearchBar" id="searchBarMain">
                     <property name="visible">True</property>
+                    <property name="app_paintable">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Press Enter to search online.</property>
-                    <attributes>
-                      <attribute name="weight" value="bold"/>
-                      <attribute name="scale" value="1.5"/>
-                    </attributes>
-                  </object>
-                  <packing>
-                    <property name="name">page0</property>
-                    <property name="title" translatable="yes">page0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkTreeView" id="treeViewSearch">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="model">listStoreSearch</property>
-                    <child internal-child="selection">
-                      <object class="GtkTreeSelection"/>
+                    <property name="search_mode_enabled">True</property>
+                    <child>
+                      <object class="GtkSearchEntry" id="searchEntryMain">
+                        <property name="width_request">400</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="primary_icon_name">edit-find-symbolic</property>
+                        <property name="primary_icon_activatable">False</property>
+                        <property name="primary_icon_sensitive">False</property>
+                        <property name="placeholder_text" translatable="yes">Search</property>
+                        <signal name="stop-search" handler="searchEntryMain_stop_search_cb" object="searchBarMain" swapped="no"/>
+                      </object>
                     </child>
                   </object>
                   <packing>
-                    <property name="name">page1</property>
-                    <property name="title" translatable="yes">page1</property>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkStack" id="stackSearchTipResults">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="transition_type">crossfade</property>
+                    <child>
+                      <object class="GtkLabel" id="lblSearchTop">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Press Enter to search online.</property>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                          <attribute name="scale" value="1.5"/>
+                        </attributes>
+                      </object>
+                      <packing>
+                        <property name="name">page0</property>
+                        <property name="title" translatable="yes">page0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkTreeView" id="treeViewSearch">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="model">listStoreSearch</property>
+                        <child internal-child="selection">
+                          <object class="GtkTreeSelection"/>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="name">page1</property>
+                        <property name="title" translatable="yes">page1</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
               </object>
               <packing>
-                <property name="name">SearchResultsTips</property>
-                <property name="title" translatable="yes" context="This page title is not visible to user.">SearchResultsTips</property>
+                <property name="name">Search</property>
+                <property name="title" translatable="yes" context="This page title is not visible to user.">Search</property>
                 <property name="position">1</property>
               </packing>
             </child>
