fix: frmMain: use gtk_main_quit() but exit()
Signed-off-by: Junde Yhi <lmy441900@gmail.com>

--- a/frmMain.glade
+++ b/frmMain.glade
@@ -37,7 +37,7 @@ Author: Junde Yhi
     <property name="default_height">505</property>
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">applications-internet</property>
-    <signal name="destroy" handler="exit" swapped="no"/>
+    <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
     <child>
       <object class="GtkBox" id="boxMain">
         <property name="visible">True</property>
